# goto

./: .gitignore  Cargo.toml  README.md  todo.todo
.build/win/: .rustc_info.json
.build/win/debug/: goto.d
.build/wsl/: .rustc_info.json
.build/wsl/debug/: goto.d
doc/: .rustdoc_fingerprint.json  reamde.md  todo.md
doc/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
doc/doc/aho_corasick/: all.html  enum.AhoCorasickKind.html  enum.Anchored.html  enum.MatchErrorKind.html  enum.MatchKind.html  enum.StartKind.html  index.html  struct.AhoCorasick.html  struct.AhoCorasickBuilder.html  struct.BuildError.html  struct.FindIter.html  struct.FindOverlappingIter.html  struct.Input.html  struct.Match.html  struct.MatchError.html  struct.PatternID.html  struct.PatternIDError.html  struct.Span.html  struct.StreamFindIter.html
doc/doc/goto/: all.html  fn.advance_by.html  fn.code.html  fn.find_path.html  fn.get_args.html  fn.main.html  fn.no_read.html  index.html  macro.dbg_print!.html  macro.dbg_print.html  macro.user_error.html  sidebar-items.js  struct.GlobalData.html
doc/doc/memchr/: all.html  fn.memchr.html  fn.memchr2.html  fn.memchr2_iter.html  fn.memchr3.html  fn.memchr3_iter.html  fn.memchr_iter.html  fn.memrchr.html  fn.memrchr2.html  (+8 more)
docs/: README.md  reamde.md  todo.md
lib/: dirs.csv  hist.csv
release/: c  c.ps1  e.ps1  expl  expl.ps1  g  g.ps1  gt  gt.ps1  gtc  gtc.ps1  gtexe.ps1  wc.ps1  wgtc.ps1
rust_doc/: .rustc_info.json
src/: commands.rs  dirs.rs  errors.rs  global.rs  hist.rs  main.rs
tools/: make  make.ps1  make.sh
(+708 files in other folders)
